tests/theories/success/0202-local-modules.ec
theory T.
  section.
    local module M = {}.
  end section.
end T.
