tests/theories/fail/0202-local-modules-access.ec
theory T.
  section.
    local module M = {}.
  end section.

  module F = M.
end T.
